# Testing_Task

./: .env.example  README.md  pyproject.toml
src/: bot.py  main.py  pymongoAPI.py
